--- a/templates/doctor_dash.html
+++ b/templates/doctor_dash.html
@@ -123,6 +123,16 @@
                     Get Availability Status
                 </button>
             </a>
+            <a href="{{ url_for('doctor_dept', name=doctor.department.name) }}" 
+              class="stat-card border-red-500 flex flex-col justify-center">
+                <button 
+                    class="btn-primary bg-red-600 text-white font-semibold px-6 py-3 rounded-lg shadow-md 
+                          transform transition duration-300 ease-in-out 
+                          hover:bg-red-700 hover:scale-105 hover:shadow-lg">
+                    View Department Details
+                </button>
+            </a>
+
         </div>
 
         <!-- Tables and Patient Lists -->
