--- a/templates/patient_dash.html
+++ b/templates/patient_dash.html
@@ -79,9 +79,8 @@
                 <span class="text-xl font-medium text-gray-700">Welcome, <span class="text-orange-600">{{this_user.name}}</span>!</span>
                 
                 <nav class="space-x-4 flex items-center text-sm font-medium">
-                    <a href="#" class="text-gray-600 hover:text-blue-600 transition-colors duration-200">Edit Profile</a>
-                    <a href="/request-history/{{this_user.user_id}}" class="text-gray-600 hover:text-blue-600 transition-colors duration-200">History</a>
-                    <a href="/login" class="text-red-500 hover:text-red-700 transition-colors duration-200 bg-red-100 px-3 py-1 rounded-md">LogOut</a>
+                    
+                    <a href="/logout" class="text-red-500 hover:text-red-700 transition-colors duration-200 bg-red-100 px-3 py-1 rounded-md">LogOut</a>
                 </nav>
             </div>
         </div>
