--- a/templates/patient_dash.html
+++ b/templates/patient_dash.html
@@ -98,7 +98,12 @@
                 <p class="text-gray-600 mb-6">Easily find and book an appointment with our specialist doctors.</p>
                 
                 <a href="/new-appointment" class="btn-primary-action w-full text-center">
-                    Book New Appointment
+                    <button 
+                    class="btn-primary bg-red-600 text-white font-semibold px-6 py-3 rounded-lg shadow-md 
+                          transform transition duration-300 ease-in-out 
+                          hover:bg-red-700 hover:scale-105 hover:shadow-lg">
+                        Book Appointment
+                </button>
                 </a>
 
             </div>
